# myFrogGame

./: CMakeLists.txt  ReadMe.md  concreteCamera.cpp  concreteCamera.h  concreteFactory.cpp  concreteFactory.h  game.cpp  game.h  newRoom.room  view.cpp  view.h  viewEntity.cpp  viewEntity.h
assets/kevin/: animations.JSON
assets/player/: animations.JSON  player_animations.JSON
assets/saveButton/: animations.JSON
assets/wall/: animations.JSON
library_source_files/: abstractFactory.cpp  abstractFactory.h  entity.cpp  entity.h  entitycamera.cpp  entitycamera.h  hitbox.cpp  hitbox.h  player.cpp  player.h  rng.cpp  rng.h  singletons.cpp  singletons.h  stationaryObject.cpp  stationaryObject.h  stopwatch.cpp  stopwatch.h  world.cpp  world.h
main_source_files/: game.cpp  game.h  levelEditorApp.cpp  levelEditorApp.h  main.cpp
pixil files/: frog_jump.pixil  frog_walk.pixil  froggie.pixil
visual_source_files/: animationLibrary.cpp  animationLibrary.h  button.cpp  button.h  concreteCamera.cpp  concreteCamera.h  concreteFactory.cpp  concreteFactory.h  view.cpp  view.h  viewEntity.cpp  viewEntity.h
world_source_files/: abstractFactory.cpp  abstractFactory.h  entity.cpp  entity.h  entitycamera.cpp  entitycamera.h  hitbox.cpp  hitbox.h  levelEditor.cpp  levelEditor.h  object.cpp  object.h  player.cpp  player.h  rng.cpp  rng.h  singletons.cpp  singletons.h  stationaryObject.cpp  stationaryObject.h  stopwatch.cpp  stopwatch.h  world.cpp  world.h
